--- a/css/style_index.css
+++ b/css/style_index.css
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
 *{
+    font-family: 'Raleway', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -58,19 +60,21 @@ body{
     /* transform: translateY(-50%); */
     position: relative;
     /* text-align: center; */
-    top: 80%;
+    top: 50px;
     left: 15%;
     width: 70%;
     height: max-content;
     background-color: #ffffff;
     border-radius: 15px;
+    padding-bottom: 12px;
 }
 
 .navbar{
+    font-size: 20px;
     padding-top: 10px;
     /* width: max-content; */
     height: max-content;
-    border-bottom: #ffbd1f solid 1px;
+    border-bottom: #ffbd1f solid 3px;
 }
 
 .nav{
@@ -93,5 +97,4 @@ body{
 .content p{
     display: none;
     text-indent: 30px;
-    margin-top:20px;
 }
