--- a/css/style_index.css
+++ b/css/style_index.css
@@ -12,12 +12,6 @@ body{
     overflow-x: hidden;
 }
 
-/* .back_layout{
-    position: relative;
-    width: 100%;
-    height: 100vh;
-} */
-
 .stars{
     position: absolute;
     display: flex;
@@ -51,9 +45,15 @@ body{
 
 .header_layout{
     width: 100%;
-    border-right: 200px solid transparent;
-    border-top: 400px solid #ffbd1f;
-    clip-path: polygon(0 0, 100% 0, 0 100%);
+    height: 650px;
+    /* border-right: 200px solid transparent;
+    border-top: 600px solid #ffbd1f;
+    clip-path: polygon(0 0, 100% 0, 0 100%); */
+}
+
+.header_layout img{
+    width: 100%;
+    height: 100%;
 }
 
 /* #logo {
@@ -66,9 +66,9 @@ body{
     /* transform: translateY(-50%); */
     position: relative;
     /* text-align: center; */
-    top: 50px;
-    left: 15%;
-    width: 70%;
+    top: 0px;
+    left: 12.5%;
+    width: 75%;
     height: max-content;
     background-color: #ffffff;
     border-radius: 15px;
@@ -78,7 +78,6 @@ body{
 .navbar{
     font-size: 20px;
     padding-top: 10px;
-    /* width: max-content; */
     height: max-content;
     border-bottom: #ffbd1f solid 3px;
 }
