--- a/css/style_index.css
+++ b/css/style_index.css
@@ -56,11 +56,31 @@ body{
     height: 100%;
 }
 
-/* #logo {
-    src: local("img/Galaxia_Hibrida_Logo-removebg-preview.png");
-    width: 70%;
-    height: 70%;
-} */
+.header_info{
+    position: absolute;
+    left: 0%;
+    top: 0%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    height: 650px;
+}
+
+#info{
+    position: relative;
+    color: white;
+    left: 0%;
+    top: 0%;
+}
+
+#logo{
+    position: relative;
+    right: 10%;
+    top: 30%;
+    width: 300px;
+    height: 300px;
+}
 
 .container{
     /* transform: translateY(-50%); */
